cmake_minimum_required(VERSION 2.8)

project(examples)

if (OF_BUILD_EXAMPLES_3D)	
	add_subdirectory(${CMAKE_SOURCE_DIR}/examples/3d/3DPrimitivesExample)
	add_subdirectory(${CMAKE_SOURCE_DIR}/examples/3d/advanced3dExample)
	#add_subdirectory(${CMAKE_SOURCE_DIR}/examples/3d/cameraLensOffsetExample)
	add_subdirectory(${CMAKE_SOURCE_DIR}/examples/3d/cameraParentingExample)
	add_subdirectory(${CMAKE_SOURCE_DIR}/examples/3d/cameraRibbonExample)
	add_subdirectory(${CMAKE_SOURCE_DIR}/examples/3d/easyCamExample)
	add_subdirectory(${CMAKE_SOURCE_DIR}/examples/3d/meshFromCamera)
	#add_subdirectory(${CMAKE_SOURCE_DIR}/examples/3d/modelNoiseExample)
	add_subdirectory(${CMAKE_SOURCE_DIR}/examples/3d/normalsExample)
	add_subdirectory(${CMAKE_SOURCE_DIR}/examples/3d/ofBoxExample)
	add_subdirectory(${CMAKE_SOURCE_DIR}/examples/3d/orientationExample)
	add_subdirectory(${CMAKE_SOURCE_DIR}/examples/3d/pointCloudExample)
	add_subdirectory(${CMAKE_SOURCE_DIR}/examples/3d/pointPickerExample)
	add_subdirectory(${CMAKE_SOURCE_DIR}/examples/3d/quaternionArcballExample)
	add_subdirectory(${CMAKE_SOURCE_DIR}/examples/3d/quaternionLatLongExample)	
endif(OF_BUILD_EXAMPLES_3D)

if (OF_BUILD_EXAMPLES_GL)
	add_subdirectory(${CMAKE_SOURCE_DIR}/examples/gl/alphaMaskingShaderExample)
	add_subdirectory(${CMAKE_SOURCE_DIR}/examples/gl/areaLightExample)
	add_subdirectory(${CMAKE_SOURCE_DIR}/examples/gl/billboardExample)
	add_subdirectory(${CMAKE_SOURCE_DIR}/examples/gl/billboardRotationExample)
	add_subdirectory(${CMAKE_SOURCE_DIR}/examples/gl/fboTrailsExample)
	add_subdirectory(${CMAKE_SOURCE_DIR}/examples/gl/geometryShaderExample)
	add_subdirectory(${CMAKE_SOURCE_DIR}/examples/gl/glInfoExample)
	add_subdirectory(${CMAKE_SOURCE_DIR}/examples/gl/gpuParticleSystemExample)
	add_subdirectory(${CMAKE_SOURCE_DIR}/examples/gl/multiLightExample)
	add_subdirectory(${CMAKE_SOURCE_DIR}/examples/gl/multiTextureShaderExample)
	add_subdirectory(${CMAKE_SOURCE_DIR}/examples/gl/pointsAsTextures)
	add_subdirectory(${CMAKE_SOURCE_DIR}/examples/gl/shaderExample)
	add_subdirectory(${CMAKE_SOURCE_DIR}/examples/gl/singleLightExample)
	add_subdirectory(${CMAKE_SOURCE_DIR}/examples/gl/slowFastRendering)
	add_subdirectory(${CMAKE_SOURCE_DIR}/examples/gl/textureExample)
	add_subdirectory(${CMAKE_SOURCE_DIR}/examples/gl/textureScreengrabExample)
	add_subdirectory(${CMAKE_SOURCE_DIR}/examples/gl/vboExample)
	add_subdirectory(${CMAKE_SOURCE_DIR}/examples/gl/vboMeshDrawInstancedExample)
	add_subdirectory(${CMAKE_SOURCE_DIR}/examples/gl/viewportExample)
endif(OF_BUILD_EXAMPLES_GL)

if (OF_BUILD_EXAMPLES_EVENTS)
	add_subdirectory(${CMAKE_SOURCE_DIR}/examples/events/advancedEventsExample)
	add_subdirectory(${CMAKE_SOURCE_DIR}/examples/events/customEventExample)
	add_subdirectory(${CMAKE_SOURCE_DIR}/examples/events/eventsExample)
	add_subdirectory(${CMAKE_SOURCE_DIR}/examples/events/simpleEventsExample)
	add_subdirectory(${CMAKE_SOURCE_DIR}/examples/events/simpleTimer)
endif(OF_BUILD_EXAMPLES_EVENTS)

if (OF_BUILD_EXAMPLES_GRAPHICS)
	add_subdirectory(${CMAKE_SOURCE_DIR}/examples/graphics/blendingExample)
	add_subdirectory(${CMAKE_SOURCE_DIR}/examples/graphics/color)
	add_subdirectory(${CMAKE_SOURCE_DIR}/examples/graphics/colorsExtended)
	add_subdirectory(${CMAKE_SOURCE_DIR}/examples/graphics/floatingPointImageExample)
	add_subdirectory(${CMAKE_SOURCE_DIR}/examples/graphics/fontsExample)
	add_subdirectory(${CMAKE_SOURCE_DIR}/examples/graphics/fontShapesExample)
	add_subdirectory(${CMAKE_SOURCE_DIR}/examples/graphics/graphicsExample)
	add_subdirectory(${CMAKE_SOURCE_DIR}/examples/graphics/imageCompressionExample)
	add_subdirectory(${CMAKE_SOURCE_DIR}/examples/graphics/imageLoaderExample)
	add_subdirectory(${CMAKE_SOURCE_DIR}/examples/graphics/imageLoaderWebExample)
	add_subdirectory(${CMAKE_SOURCE_DIR}/examples/graphics/imageSaverExample)
	add_subdirectory(${CMAKE_SOURCE_DIR}/examples/graphics/imageSequenceExample)
	add_subdirectory(${CMAKE_SOURCE_DIR}/examples/graphics/imageSubsectionExample)
	add_subdirectory(${CMAKE_SOURCE_DIR}/examples/graphics/lutFilterExample)
	add_subdirectory(${CMAKE_SOURCE_DIR}/examples/graphics/pdfExample)
	add_subdirectory(${CMAKE_SOURCE_DIR}/examples/graphics/polygonExample)
	#add_subdirectory(${CMAKE_SOURCE_DIR}/examples/graphics/polylineBlobsExample)
	add_subdirectory(${CMAKE_SOURCE_DIR}/examples/graphics/rectangleAlignmentAndScaling)
	add_subdirectory(${CMAKE_SOURCE_DIR}/examples/graphics/simpleColorKey)
endif(OF_BUILD_EXAMPLES_GRAPHICS)

if (OF_BUILD_EXAMPLES_GUI)
	add_subdirectory(${CMAKE_SOURCE_DIR}/examples/gui/guiExample)
	add_subdirectory(${CMAKE_SOURCE_DIR}/examples/gui/guiFromParametersExample)
	add_subdirectory(${CMAKE_SOURCE_DIR}/examples/gui/oscParametersReceiver)
	add_subdirectory(${CMAKE_SOURCE_DIR}/examples/gui/oscParametersSender)
	add_subdirectory(${CMAKE_SOURCE_DIR}/examples/gui/parameterEdgeCasesExample)
	add_subdirectory(${CMAKE_SOURCE_DIR}/examples/gui/parameterGroupExample)	
endif(OF_BUILD_EXAMPLES_GUI)

if (OF_BUILD_EXAMPLES_MATH)

endif(OF_BUILD_EXAMPLES_MATH)